# dypendence

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  __init__.py  dypendence.py  makefile  pyproject.toml  settings.toml  setup.cfg
.github/workflows/: main.yml
dypendence/: __init__.py  __main__.py  app.py  conftest.py  dypendence.py  logger.py
dypendence/tests/: test_app.py  test_dypendence.py
tests/: settings.toml  test_dypendence.py
