[tool.poetry]
name = "dypendence"
version = "0.1.2"
description = "Dependency Injection over Dynaconf"
authors = ["VaultVulp <me@vaultvulp.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/VaultVulp/dypendence"

[tool.poetry.dependencies]
python = "^3.8"
dynaconf = "^3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
isort = "^5.6.3"
pytest = "^6.1.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
pytest-env = "^0.6.2"
pytest-deadfixtures = "^2.2.1"
pytest-html = "^2.1.1"
pytest-mock = "^3.3.1"
pytest-randomly = "^3.4.1"
pytest-sugar = "^0.9.4"
freezegun = "^1.0.0"
yapf = "^0.30.0"
s3cmd = "^2.1.0"
coverage-badge = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
