[metadata]
name = dypendence
description = Dependency Injection over Dynaconf
author = dypendence
author-email = me@vaultvulp.dev

[files]
packages = dypendence

[entry_points]
console_scripts =
    dypendence = dypendence.app:cli

[tool:pytest]
addopts = --tb short --cov-fail-under 30
cache_dir=.cache
python_files=
    test_*.py
env=
    D:ENV_FOR_DYNACONF=testing

[yapf]
BASED_ON_STYLE = yapf
INDENT_WIDTH = 4
ALIGN_CLOSING_BRACKET_WITH_VISUAL_INDENT = True
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = True
COALESCE_BRACKETS = True
COLUMN_LIMIT = 120
DEDENT_CLOSING_BRACKETS = True
EACH_DICT_ENTRY_ON_SEPARATE_LINE = True
INDENT_DICTIONARY_VALUE = True
SPACES_AROUND_POWER_OPERATOR= True
SPLIT_ARGUMENTS_WHEN_COMMA_TERMINATED = True
SPLIT_BEFORE_DICT_SET_GENERATOR = True
SPLIT_BEFORE_EXPRESSION_AFTER_OPENING_PAREN = True
SPLIT_BEFORE_FIRST_ARGUMENT = True
SPLIT_COMPLEX_COMPREHENSION = True
ALLOW_SPLIT_BEFORE_DICT_VALUE = False

[tool:isort]
line_length=120
multi_line_output=3
include_trailing_comma=1
use_parentheses=1
atomic=1
default_section=THIRDPARTY
known_first_party=dypendence

[coverage:run]
branch = true
source =
    dypendence

[flake8]
max-complexity = 10
max-line-length = 120
